# mc4

./: .gitignore  CMakeLists.txt  LICENSE  README.md
mc4/: CMakeLists.txt  main.c  main.cpp  mc4.cpp  mc4.h
mc4gui/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
